// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        onChange={[Function]}
        type="search"
        value="redux"
      />
      <button
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button
  className={undefined}
  onClick={undefined}
  type="button"
>
  Give me more...
</button>
`;

exports[`Search has a valid snapshot 1`] = `
<form
  onSubmit={undefined}
>
  <input
    onChange={undefined}
    type="search"
    value={undefined}
  />
  <button
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Table has a valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-header"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      Title
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      Author
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      Number of comments
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      Points
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      Action
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href={undefined}
        target="_blank"
        title="Title"
      >
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
      title="Author"
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
      title="Number of comments"
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
      title="Points"
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href={undefined}
        target="_blank"
        title="Title"
      >
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
      title="Author"
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
      title="Number of comments"
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
      title="Points"
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
